<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register_Activity"    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="419dp"
            android:layout_height="729dp"
            android:background="@drawable/bd_card"
            android:orientation="vertical"
            android:padding="40dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/Reg_scrn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/registration"
                android:textColor="@color/color_head"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/TUser_id"
                android:layout_below="@+id/Reg_scrn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/user_id"
                android:textColor="@color/color_skyblue"
                android:textStyle="normal"
                android:fontFamily="sans-serif-condensed-medium"
                android:textSize="20sp"
                />

            <EditText
                android:id="@+id/User_id"
                android:layout_below="@id/Reg_scrn"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/bgedittext"
                android:ems="10"
                android:singleLine="true"
                android:inputType="text"
                android:fontFamily="sans-serif-thin"
                android:textStyle="italic"
                android:hint="@string/john123"
                android:importantForAutofill="no" />

            <TextView
                android:id="@+id/TUsername_input"
                android:layout_below="@+id/TUser_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/user_name"
                android:textColor="@color/color_skyblue"
                android:textStyle="normal"
                android:fontFamily="sans-serif-condensed-medium"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/Username_input"
                android:layout_below="@id/TUser_id"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/bgedittext"
                android:ems="10"
                android:singleLine="true"
                android:hint="@string/john_marques"
                android:inputType="text"
                android:fontFamily="sans-serif-thin"
                android:textStyle="italic"
                android:importantForAutofill="no" />

            <TextView
                android:id="@+id/TUserPassword_input"
                android:layout_below="@+id/TUsername_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/pass"
                android:textColor="@color/color_skyblue"
                android:textStyle="normal"
                android:fontFamily="sans-serif-condensed-medium"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/UserPassword_input"
                android:layout_below="@id/TUsername_input"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/bgedittext"
                android:ems="10"
                android:singleLine="true"
                android:hint="@string/_123"
                android:inputType="textPassword"
                android:fontFamily="sans-serif-thin"
                android:textStyle="italic"
                android:importantForAutofill="no" />
            <TextView
                android:id="@+id/TUseremail_input"
                android:layout_below="@+id/TUserPassword_input"
                android:text="@string/e_mail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:textColor="@color/color_skyblue"
                android:textStyle="normal"
                android:fontFamily="sans-serif-condensed-medium"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/Useremail_input"
                android:layout_below="@id/TUserPassword_input"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:autofillHints="@string/email"
                android:background="@drawable/bgedittext"
                android:ems="10"
                android:singleLine="true"
                android:hint="@string/john_gmail_com"
                android:inputType="text"
                android:fontFamily="sans-serif-thin"
                android:textStyle="italic"/>

            <TextView
                android:id="@+id/TUserphone_input"
                android:layout_below="@+id/TUseremail_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/phone_no"
                android:textColor="@color/color_skyblue"
                android:textStyle="normal"
                android:fontFamily="sans-serif-condensed-medium"
                android:textSize="20sp" />


            <EditText
                android:id="@+id/Userphone_input"
                android:layout_below="@id/TUseremail_input"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/bgedittext"
                android:ems="10"
                android:singleLine="true"
                android:hint="@string/_92200000"
                android:inputType="text"
                android:fontFamily="sans-serif-thin"
                android:textStyle="italic"
                android:importantForAutofill="no" />


            <TextView
                android:id="@+id/TUsercity_input"
                android:layout_below="@+id/TUserphone_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/city"
                android:textColor="@color/color_skyblue"
                android:textStyle="normal"
                android:fontFamily="sans-serif-condensed-medium"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/Usercity_input"
                android:layout_below="@id/TUserphone_input"
                android:hint="@string/jaipur"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/bgedittext"
                android:ems="10"
                android:singleLine="true"
                android:inputType="text"
                android:fontFamily="sans-serif-thin"
                android:textStyle="italic"
                android:importantForAutofill="no" />

            <TextView
                android:id="@+id/TUserstate_input"
                android:layout_below="@+id/TUsercity_input"
                android:text="@string/state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:textColor="@color/color_skyblue"
                android:textStyle="normal"
                android:fontFamily="sans-serif-condensed-medium"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/Userstate_input"
                android:layout_below="@id/TUsercity_input"
                android:hint="@string/madhya_pradesh"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/bgedittext"
                android:ems="10"
                android:singleLine="true"
                android:inputType="text"
                android:fontFamily="sans-serif-thin"
                android:textStyle="italic"
                android:importantForAutofill="no" />


            <Button
                android:id="@+id/Register_btn"
                android:layout_below="@id/TUserstate_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:background="@drawable/bg_btn"
                android:text="@string/register"
                android:textStyle="bold"
                android:textColor="@color/color_midblue"
                android:textSize="18sp"
                android:paddingLeft="50dp"
                android:paddingRight="50dp"
                android:textAllCaps="false"/>


        </LinearLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>