<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".docregister"
    android:configChanges="orientation|screenSize|screenLayout|keyboardHidden"
    android:label="@string/app_name">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bd_card"
            android:orientation="vertical"
            android:padding="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">
            <TextView
            android:id="@+id/Reg_screen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/doctor_registration"
            android:textColor="@color/color_head"
            android:textSize="25sp"
            android:textStyle="bold" />



            <TextView
                android:id="@+id/Tdoc_id"
                android:layout_below="@+id/Reg_screen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/doc_id"
                android:textColor="@color/color_skyblue"
                android:textStyle="normal"
                android:fontFamily="sans-serif-condensed-medium"
                android:textSize="20sp"
                />

            <EditText
                android:id="@+id/Doc_id"
                android:layout_below="@id/Reg_screen"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/bgedittext"
                android:ems="10"
                android:singleLine="true"
                android:ellipsize="start"
                android:hint="Enter Doctor id"
                android:textColorHint="@color/hint_color"
                android:inputType="text"
                android:fontFamily="sans-serif-thin"
                android:textStyle="italic"
                android:paddingHorizontal="40dp"
                android:autofillHints="" />

            <TextView
                android:id="@+id/TDocname_input"
                android:layout_below="@+id/Tdoc_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/doctor_name"
                android:textColor="@color/color_skyblue"
                android:textStyle="normal"
                android:fontFamily="sans-serif-condensed-medium"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/Docname_input"
                android:layout_below="@id/Tdoc_id"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/bgedittext"
                android:ems="10"
                android:singleLine="true"
                android:hint="Enter Name"
                android:paddingHorizontal="40dp"
                android:textColorHint="@color/hint_color"
                android:inputType="text"
                android:fontFamily="sans-serif-thin"
                android:textStyle="italic"
                android:importantForAutofill="no" />

            <TextView
                android:id="@+id/TDoc_adhaar_input"
                android:layout_below="@+id/TDocname_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/adhaar_no"
                android:textColor="@color/color_skyblue"
                android:textStyle="normal"
                android:fontFamily="sans-serif-condensed-medium"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/Doc_adhaar_input"
                android:layout_below="@id/TDocname_input"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/bgedittext"
                android:ems="10"
                android:singleLine="true"
                android:hint="Valid Adhaar No."
                android:paddingHorizontal="40dp"
                android:textColorHint="@color/hint_color"
                android:inputType="number"
                android:fontFamily="sans-serif-thin"
                android:textStyle="italic"
                android:importantForAutofill="no" />
            <TextView
                android:id="@+id/TLocation_input"
                android:layout_below="@+id/TDoc_adhaar_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/location"
                android:textColor="@color/color_skyblue"
                android:textStyle="normal"
                android:fontFamily="sans-serif-condensed-medium"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/Location_input"
                android:layout_below="@id/TDoc_adhaar_input"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:autofillHints="@string/email"
                android:background="@drawable/bgedittext"
                android:ems="10"
                android:paddingHorizontal="40dp"
                android:textColorHint="@color/hint_color"
                android:singleLine="true"
                android:hint="Address"
                android:inputType="text"
                android:fontFamily="sans-serif-thin"
                android:textStyle="italic"/>

            <TextView
                android:id="@+id/T_spec_input"
                android:layout_below="@+id/TLocation_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/specialization"
                android:textColor="@color/color_skyblue"
                android:textStyle="normal"
                android:fontFamily="sans-serif-condensed-medium"
                android:textSize="20sp" />


            <EditText
                android:id="@+id/Spec_input"
                android:layout_below="@id/TLocation_input"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/bgedittext"
                android:ems="10"
                android:singleLine="true"
                android:paddingHorizontal="40dp"
                android:textColorHint="@color/hint_color"
                android:hint="Enter specialization"
                android:inputType="text"
                android:fontFamily="sans-serif-thin"
                android:textStyle="italic"
                android:importantForAutofill="no" />


            <TextView
                android:id="@+id/TBio_input"
                android:layout_below="@+id/T_spec_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/bio"
                android:textColor="@color/color_skyblue"
                android:textStyle="normal"
                android:fontFamily="sans-serif-condensed-medium"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/Bio_input"
                android:layout_below="@id/T_spec_input"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/bgedittext"
                android:ems="10"
                android:singleLine="true"
                android:hint="Enter Description"
                android:paddingHorizontal="40dp"
                android:textColorHint="@color/hint_color"
                android:inputType="text"
                android:fontFamily="sans-serif-thin"
                android:textStyle="italic"
                android:importantForAutofill="no" />

            <TextView
                android:id="@+id/TRating_input"
                android:layout_below="@+id/TBio_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/rating"
                android:textColor="@color/color_skyblue"
                android:textStyle="normal"
                android:fontFamily="sans-serif-condensed-medium"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/Rating_input"

                android:layout_below="@id/TBio_input"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/bgedittext"
                android:ems="10"
                android:singleLine="true"
                android:paddingHorizontal="40dp"
                android:textColorHint="@color/hint_color"
                android:hint="Rating out of 5"
                android:inputType="text"
                android:fontFamily="sans-serif-thin"
                android:textStyle="italic"
                android:importantForAutofill="no" />

            <TextView
                android:id="@+id/TDocemail_input"
                android:layout_below="@+id/TRating_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/e_mail"
                android:textColor="@color/color_skyblue"
                android:textStyle="normal"
                android:fontFamily="sans-serif-condensed-medium"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/Docemail_input"
                android:layout_below="@id/TRating_input"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/bgedittext"
                android:ems="10"
                android:singleLine="true"
                android:paddingHorizontal="40dp"
                android:textColorHint="@color/hint_color"
                android:hint="Valid Email id"
                android:inputType="text"
                android:fontFamily="sans-serif-thin"
                android:textStyle="italic"
                android:importantForAutofill="no" />

            <TextView
                android:id="@+id/TDocphone_input"
                android:layout_below="@+id/TDocemail_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/phone_no"
                android:textColor="@color/color_skyblue"
                android:textStyle="normal"
                android:fontFamily="sans-serif-condensed-medium"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/Docphone_input"
                android:layout_below="@id/TDocemail_input"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/bgedittext"
                android:ems="10"
                android:singleLine="true"
                android:paddingHorizontal="40dp"
                android:textColorHint="@color/hint_color"
                android:hint="Enter Phone number"
                android:inputType="text"
                android:fontFamily="sans-serif-thin"
                android:textStyle="italic"
                android:importantForAutofill="no" />

            <TextView
                android:id="@+id/Tclinc_name_input"
                android:layout_below="@+id/TDocphone_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/clincname"
                android:textColor="@color/color_skyblue"
                android:textStyle="normal"
                android:fontFamily="sans-serif-condensed-medium"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/clinic_name_input"
                android:layout_below="@id/TDocphone_input"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/bgedittext"
                android:ems="10"
                android:singleLine="true"
                android:paddingHorizontal="40dp"
                android:textColorHint="@color/hint_color"
                android:hint="Enter name of the clinic"
                android:inputType="text"
                android:fontFamily="sans-serif-thin"
                android:textStyle="italic"
                android:importantForAutofill="no" />

            <Button
                android:id="@+id/Doc_Register_btn"
                android:layout_below="@id/Tclinc_name_input"
                android:layout_width="match_parent"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:background="@drawable/bg_btn"
                android:text="@string/register"
                android:textStyle="bold"
                android:textColor="@color/color_midblue"
                android:textSize="18sp" />


        </LinearLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>